Fix misalignment of the first service tree item

--- a/styles/service-tree.less
+++ b/styles/service-tree.less
@@ -33,6 +33,15 @@
     margin-top: @sidebar-small-margin;
   }
 
+  ul.main-list.service-tree li {
+    padding-top: 18px;
+    padding-bottom: 18px;
+  }
+
+  ul.main-list li .service-name {
+    line-height: initial;
+  }
+  
   .header-item.expanded-search-results {
     padding: 0;
     height: 60px;
